# OpenCVExample

./: README.md  build.gradle  config.gradle  settings.gradle
app/: build.gradle  default-lint-report.xml  lint-report.html  lint-report.xml  multidex-config.txt
app/src/androidTest/java/com/example/opencvexample/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  bspatch.c  native-lib.cpp
app/src/main/cpp/include/bzip/: bzlib.h  crctable.c  decompress.c  huffman.c
app/src/main/cpp/include/libswscale/: swscale.h
app/src/main/cpp/include/opencv2/flann/: hierarchical_clustering_index.h
app/src/main/cpp/include/opencv2/videoio/legacy/: constants_c.h
app/src/main/java/com/example/opencvexample/: BaseActivity.java  BaseApplication.java  BaseViewModel.java  CameraServerActivity.java  ClassLoadExample.java  CustomEditText.java  CustomPlayVideoActivity.java  Favourites.java  FrameAnimation.java  GameSurfaceView.java  H264DeCodePlay.java  ImageShowActivity.java  InjectManage.java  JavaApi.java  LayoutActivity.java  ListenerInvocationHandler.java  LockReceiver.java  MainActivity.java  MainActivity2.java  MapActivity.java  MapSelectPostion.java  MotionActivity.java  MyListView.java  MyViewPager.java  NetworkCallbackImp.java  ParamTest.java  SampleAdapter.java  ScreenRecorder.java  SecondActivity.java  Sprite.java  (+6 more)
app/src/main/res/drawable/: ic_launcher_background.xml  selectedbg.xml
app/src/main/res/layout/: activity_camera_server.xml  activity_custom_play_video.xml  activity_image_show.xml  activity_layout.xml  activity_main.xml  activity_map.xml  activity_motion.xml  activity_motion1.xml  activity_motion2.xml  activity_second.xml  activity_skin.xml  activity_surface_view.xml  activity_third.xml  activity_tinker.xml  blue_item_layout.xml  blue_layout.xml  content_second.xml  content_third.xml  custom_relativelayout.xml  login_layout.xml  main_activity2_activity.xml  rotate_button.xml  sample_my_view.xml  sound_set_layout.xml  sun_run.xml  sun_system.xml
app/src/main/res/raw/: chinahigh.xml
app/src/main/res/values/: arrays.xml  colors.xml  strings.xml  styles.xml
app/src/main/res/xml/: activity_motion2_scene.xml  activity_motion_scene.xml  lock_screen.xml  rotate_button_scene.xml  sun_run_scene.xml  sun_system_scene.xml
buildSrc/: build.gradle
buildSrc/src/main/groovy/: CustomTransform.groovy  JiaguTask.groovy  MyExtension.groovy  MyPlugin.groovy  MyTransform  Tesess.groovy  TestPlugin.groovy  TransformTest.groovy
gradle/wrapper/: gradle-wrapper.properties
myplugin/: build.gradle
picturerecognition/: build.gradle  maven_push.gradle  publish-mavencentral.gradle
picturerecognition/src/main/: AndroidManifest.xml
picturerecognition/src/main/cpp/: CMakeLists.txt  jni-lib.cpp  native-lib.cpp  native-lib.h  picturerecognition.cpp  utils.cpp  utils.h
picturerecognition/src/main/cpp/include/bzip/: blocksort.c  bzlib.c  compress.c  randtable.c
picturerecognition/src/main/cpp/include/libavformat/: avformat.h
picturerecognition/src/main/cpp/include/libavutil/: imgutils.h  opt.h  pixdesc.h
repo/com/example/plugin/tools/myplugin/: maven-metadata.xml  maven-metadata.xml.md5  maven-metadata.xml.sha1
res/: example.txt
(+126 files in other folders)
